--- a/package.json
+++ b/package.json
@@ -2,9 +2,16 @@
   "name": "rails_vue3_app",
   "private": true,
   "dependencies": {
-    "@rails/ujs": "^6.0.0",
+    "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
-    "@rails/actioncable": "^6.0.0"
+    "@rails/ujs": "^6.0.0",
+    "@rails/webpacker": "^5.4.4",
+    "vue": "^3.2.36"
   },
-  "version": "0.1.0"
+  "version": "0.1.0",
+  "devDependencies": {
+    "@vue/compiler-sfc": "^3.3.7",
+    "vue-loader": "^17.3.0",
+    "webpack-dev-server": "^4.15.1"
+  }
 }
