--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "version": "0.1.0",
   "devDependencies": {
     "@vue/compiler-sfc": "^3.3.7",
+    "@webpack-cli/serve": "^2.0.5",
     "vue-loader": "^17.3.0",
     "webpack-dev-server": "^4.15.1"
   }
