--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@vue/compiler-sfc": "^3.3.7",
     "@webpack-cli/serve": "^2.0.5",
+    "axios": "^1.6.0",
     "vue-loader": "^17.3.0",
     "webpack-dev-server": "^3"
   }
